[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-portfolio-tracker"
version = "0.1.0"
description = "FIFO/LIFO portfolio tracker with shorts, fees, and PnL reporting."
authors = [
    { name = "Masoud Koochak" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.scripts]
python_portfolio_tracker = "python_portfolio_tracker.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
